[package]
name = "esp_fan_controller"
version = "0.1.0"
authors = ["as"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.5.0"
esp-backtrace = { version = "0.2.0", features = ["esp32", "panic-handler", "print-uart"] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }
esp-println = { version = "0.3.1", features = [ "esp32", "log" ] }
log = "0.4.17"
esp-hal-common = "0.2.0"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
